refactor(pricing): address java:S3358